# kivsee-render

./: .gitignore  .release-please-config.json  .release-please-manifest.json  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  deploy_example.sh  kivsee-render.code-workspace  kivsee-render.def  library.json  unity-build-deploy.ps1  unity-build-deploy.sh
.github/workflows/: build-service.yml  py-bindings.yml  release-bindings.yml  release-please.yml  test.yml
bindings/: BUILD.bazel  kivsee_render_py_bindings.cpp
cmake/: kivsee-render-config.cmake.in
examples/const_color/: const_color.cpp
examples/from_protobuf/: from_protobuf.cpp  generate_animation.py  generate_segments.py  msg.h  pio_deploy.sh  segments_map_config.h
include/: animation.h  effect.h  effects.pb.h  functions.pb.h  hsv.h  led_controller.h  segments.pb.h  test.h  utils.h
include/color/: const_color.h  rainbow.h
include/effect/: brightness.h  hue.h  position_brightness.h  position_hue.h  position_saturation.h  saturation.h  snake.h  snake_brightness.h  snake_hue.h  snake_saturation.h  timed_brightness.h  timed_hue.h  timed_saturation.h
include/functions/float_functions/: comb2.h  const_value.h  float_functions.h  half.h  linear.h  repeat.h  sin.h  steps.h
include/segments/: segment.h  segments_map.h
proto/: compile_protos.sh  effects.options  effects.proto  effects_pb.js  effects_pb2.py  functions.options  functions_pb.js  functions_pb2.py  segments.options  segments.proto  segments_pb2.py
simulation-service/: BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  cpp-base64.BUILD  httplib.BUILD  nlohmann_json.BUILD
simulation-service/include/: led_controller.h
simulation-service/src/: led_controller.cpp  main.cpp
src/: animation.cpp  effect.cpp  effects.pb.c  functions.pb.c  led_controller.cpp  segments.pb.c  simulation.cpp  test.cpp
src/color/: brightness.cpp  const_color.cpp  rainbow.cpp
src/effect/: brightness.cpp  hue.cpp  position_brightness.cpp  position_hue.cpp  position_saturation.cpp  saturation.cpp  snake.cpp  snake_brightness.cpp  snake_hue.cpp  snake_saturation.cpp  timed_brightness.cpp  timed_hue.cpp  timed_saturation.cpp
src/functions/float_functions/: float_function.cpp
src/hue/: hue.cpp
src/segments/: segments_map.cpp
test/: BUILD  CMakeLists.txt  effect.cpp  effects.pb.cc  effects.pb.h  functions.pb.cc  functions.pb.h  segments.pb.cc  segments.pb.h  segments_map.cpp  snake.cpp  test1.cpp
unity/: CMakeLists.txt  KivseeUnityPlugin.cpp  KivseeUnityPlugin.h  NewUnityPlugin.cpp  README.md
