package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kivsee-render",
    srcs = glob([
        "src/**/*.pb.c",
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
        "src/**/*.pb.h",
    ], allow_empty = True),
    deps = [
        "@nanopb//:nanopb"
    ],
    copts = [
        "-Iinclude", 
        "-Iexternal/nanopb",
        "/std:c++20",
    ],
    visibility = ["//visibility:public"],
)

# Windows DLL target for Unity
cc_binary(
    name = "kivsee-render-unity",
    srcs = glob([
        "unity/*.cpp",
        "unity/**/*.h",
        "interfaces/**/*.h",
    ], allow_empty = True),
    deps = [":kivsee-render"],
    
    linkshared = 1, # build a shared library (DLL) instead of an executable
    linkstatic = 1, # statically link all dependencies into the DLL rather than having external DLL dependencies
    copts = [
        "-Iunity",
        "-Iinclude",
        "-Iexternal/nanopb",
        "/std:c++20"
    ],
)