package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kivsee-render",
    srcs = glob([
        "src/**/*.pb.c",
        "src/**/*.cpp",
    ]),
    hdrs=glob([
        "include/**/*.h",
    ]),
    deps = [
        "@nanopb//:nanopb"
    ],
    includes = [
        "include",
    ],
    copts = ["-Iinclude", "-Iexternal/nanopb"],
    visibility = ["//visibility:public"],
)
