module(
    name = "kivsee-render",
    version = "0.1.1",
)

# Required dependencies
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_python", version = "1.4.1")

# Platform support
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Include nanopb manually via http_archive
# This needs to go into a MODULE.bazel extension via a module extension (see note below)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nanopb",
    url = "https://github.com/nanopb/nanopb/archive/nanopb-0.4.5.zip",
    strip_prefix = "nanopb-nanopb-0.4.5",
)
