load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "gtest",
    url = "https://github.com/google/googletest/archive/release-1.11.0.zip",
    strip_prefix = "googletest-release-1.11.0",
)

http_archive(
    name = "nanopb",
    url = "https://github.com/nanopb/nanopb/archive/nanopb-0.4.5.zip",
    strip_prefix = "nanopb-nanopb-0.4.5",
)

