load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "gtest",
    url = "https://github.com/google/googletest/archive/release-1.11.0.zip",
    strip_prefix = "googletest-release-1.11.0",
)

http_archive(
    name = "nanopb",
    url = "https://github.com/nanopb/nanopb/archive/nanopb-0.4.5.zip",
    strip_prefix = "nanopb-nanopb-0.4.5",
)

http_archive(
    name = "com_google_protobuf",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/protobuf-all-3.14.0.zip",
    strip_prefix = "protobuf-3.14.0",
)

# it looks like we shouldn't do it ourselves, but it doesn't work without it
# TODO: understand how to use protobuf correctly
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

