load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# Define the supported platforms
SUPPORTED_PLATFORMS = [
    "linux_x86_64",
    "linux_aarch64",
    "linux_armv7",
    "macos_x86_64",
    "macos_arm64",
    "windows_x86_64",
]

# Base pybind11 extension for the current platform
pybind_extension(
    name = "kivsee_render",
    srcs = ["kivsee_render_py_bindings.cpp"],
    deps = ["//:kivsee-render"],
    visibility = ["//visibility:public"],
)

# Platform-specific targets
[pybind_extension(
    name = "kivsee_render_{}".format(platform),
    srcs = ["kivsee_render_py_bindings.cpp"],
    deps = ["//:kivsee-render"],
    visibility = ["//visibility:public"],
) for platform in SUPPORTED_PLATFORMS]

# Create platform-specific packages
[pkg_tar(
    name = "kivsee_render_{}_pkg".format(platform),
    srcs = [":kivsee_render_{}".format(platform)],
    package_dir = "lib/kivsee_render",
) for platform in SUPPORTED_PLATFORMS]
